<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/editor_layout_padding">

    <TextView
        android:id="@+id/textView4"
        style="@style/TextViewStyle"
        android:text="@string/product_name_text_view_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/product_name_edit_text"
        style="@style/EditTextStyle"
        android:focusable="true"
        android:hint="@string/product_name_edit_text_hint"
        android:inputType="textAutoCorrect"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView5"
        style="@style/TextViewStyle"
        android:text="@string/product_price_text_view_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_name_edit_text" />

    <EditText
        android:id="@+id/product_price_edit_text"
        style="@style/EditTextStyle"
        android:hint="@string/product_price_edit_text_hint"
        android:inputType="number"
        android:maxLength="9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView6"
        style="@style/TextViewStyle"
        android:text="@string/product_quantity_text_view_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_price_edit_text" />

    <EditText
        android:id="@+id/product_quantity_edit_text"
        style="@style/EditTextStyle"
        android:hint="@string/product_quantity_edit_text_hint"
        android:inputType="number"
        android:maxLength="9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView7"
        style="@style/TextViewStyle"
        android:layout_marginTop="@dimen/editor_supplier_name_margin_top"
        android:text="@string/supplier_name_text_view_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_quantity_edit_text" />

    <EditText
        android:id="@+id/product_supplier_name_edit_text"
        style="@style/EditTextStyle"
        android:hint="@string/supplier_name_edit_text_hint"
        android:inputType="textAutoCorrect"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView8"
        style="@style/TextViewStyle"
        android:text="@string/supplier_phone_number_text_view_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_supplier_name_edit_text" />

    <EditText
        android:id="@+id/product_supplier_phone_number_edit_text"
        style="@style/EditTextStyle"
        android:hint="@string/supplier_phone_number_edit_text_hint"
        android:inputType="phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

</android.support.constraint.ConstraintLayout>